# Agentcy-Multiagents

./: 404.html  README.md  SETUP-GUIDE.md  index.html
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
SECURITY/: index.html
coffeeAGNTCY/coffee_agents/corto/: pyproject.toml
coffeeAGNTCY/coffee_agents/corto/common/: llm.py
coffeeAGNTCY/coffee_agents/corto/exchange/: agent.py
coffeeAGNTCY/coffee_agents/corto/farm/: agent_executor.py  farm_server.py
coffeeAGNTCY/coffee_agents/lungo/: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
coffeeAGNTCY/coffee_agents/lungo/agents/farms/brazil/: agent_executor.py  card.py
coffeeAGNTCY/coffee_agents/lungo/agents/farms/colombia/: agent_executor.py  card.py
coffeeAGNTCY/coffee_agents/lungo/agents/farms/vietnam/: agent_executor.py  card.py
coffeeAGNTCY/coffee_agents/lungo/agents/logistics/accountant/: agent_executor.py
coffeeAGNTCY/coffee_agents/lungo/agents/logistics/farm/: agent_executor.py
coffeeAGNTCY/coffee_agents/lungo/agents/logistics/helpdesk/: agent_executor.py
coffeeAGNTCY/coffee_agents/lungo/agents/logistics/shipper/: agent_executor.py
coffeeAGNTCY/coffee_agents/lungo/common/: llm.py
coffeeAGNTCY/coffee_agents/lungo/docker/: Dockerfile.brazil-farm  Dockerfile.colombia-farm  Dockerfile.exchange  Dockerfile.payment-mcp  Dockerfile.vietnam-farm  Dockerfile.weather-mcp
search/: search_index.json
